final user management and auth